package com.enterprise.assistant.domain.model;

public enum ConversationStatus {
    ACTIVE,
    COMPLETED
}
