package com.enterprise.assistant.domain.model;

public enum Intent {
    WEATHER_QUERY,
    GREETING,
    FAREWELL,
    HELP,
    UNKNOWN
}
