package com.enterprise.assistant.domain.model;

public enum MessageRole {
    USER,
    ASSISTANT
}
